@@ -790,6 +790,7 @@ macro.header=// This is a recorded macro. First, check over the\n\
 #{{{ Commands that don't appear in menus
 backspace-word.label=Delete Previous Word
 backspace-word-std.label=Delete Previous Word (Eat Whitespace)
+backspace-word-std-after.label=Delete Previous Word (Eat Whitespace after word)
 backspace.label=Delete Previous Character
 delete-word.label=Delete Next Word
 delete-word-std.label=Delete Next Word (Eat Whitespace)
@@ -820,6 +821,7 @@ prev-page.label=Go to Previous Page
 prev-paragraph.label=Go to Previous Paragraph
 prev-word.label=Go to Previous Word
 prev-word-std.label=Go to Previous Word (Eat Whitespace)
+prev-word-std-after.label=Go to Previous Word (Eat Whitespace after word)
 select-document-end.label=Select to End of Buffer
 select-document-home.label=Select to Start of Buffer
 select-end.label=Select to Smart End Position
@@ -838,6 +840,7 @@ select-prev-page.label=Select Previous Page
 select-prev-paragraph.label=Select Previous Paragraph
 select-prev-word.label=Select Previous Word
 select-prev-word-std.label=Select Previous Word (Eat Whitespace)
+select-prev-word-std-after.label=Select Previous Word (Eat Whitespace after word)
 select-visible-end.label=Select to Last Visible Line
 select-visible-home.label=Select to First Visible Line
 select-whitespace-end.label=Select to End of White Space
